filling statistics with data from db
